Fix form resize issue on mobile and optimizations

--- a/style.css
+++ b/style.css
@@ -21,10 +21,20 @@ body, html {
   display: none;
 }
 
-#page_one, #page_three {
+#page_one {
   padding-top: 10%;
   width: 90%;
   margin-left: 5%;
+}
+
+#page_three {
+  overflow: scroll;
+  padding-top: 2%;
+  padding-bottom: 10%;
+}
+
+#page_three img {
+  width: 100%;
 }
 
 a {
